update nav input text box value when clicking a link, fix nav spacing for mobile

--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -11,11 +11,12 @@ header
     background: $background
     color: white
     font-family: verdana, arial, helvetica, sans-serif
-    width: 200px
-    margin-right: 5px
+    width: 150px
     &:-webkit-autofill
       -webkit-box-shadow: 0 0 0 1000px $background inset
       -webkit-text-fill-color: white
+  #subheading input[type="submit"]
+    margin-left: 5px
   label
     font-size: 16px
 
@@ -43,6 +44,7 @@ header
           width: 100px
       #forms
         margin-left: 15px
+        margin-bottom: 5px
    
   #status 
     display: flex
